--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,3 +12,5 @@ for a_post in @posts # @posts is a variable defined in the controller as @posts 
 <%
 end
 %>
+
+<%= link_to "Add New Post" , new_post_path %>
