--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add New Post</h1>
-<% form_for @post do |f| %>
+<%= form_for @post do |f| %>
 <p>
 	<%= f.label :title %> <br>
 	<%= f.text_field :title %> <br>
@@ -12,7 +12,7 @@
 	<%= f.select :category_id , Category.all.collect {|x|[x.name , x.id]} , { :include_blank => "Select One" } %> <br>
 </p> 
 <p>
-	<%=  f.submit "Add Post" %>
+	<%=  f.submit "Update Post" %>
 </p>
-<%= end %>
-
+<% end %>
+<%= link_to "Go Back" , posts_path %>
