--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @post.title %></h1>
 <small> <%= @post.created_at.strftime("%b %d. %Y") %></small>
 <p><%= @post.body %></p>
-<%= link_to "Edit Post" , edit_post_path %>
+<%= link_to "Edit Post" , edit_post_path %> |
+<%= link_to "Go Back" , posts_path %> | <%= link_to "Delete" , @post , :confirm => "Are you sure that you want to delete?" , :method => :delete %> 
