--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+ <p id="notice"><%= notice %></p>
+
+<p>
+  <h1>
+  	<%= @category.name %>
+  <h1>
+</p>
+
+
+<% 
+
+if for post in @posts do 
+
+%>
+
+<h3><%= link_to post.title , post %></h3>
+<p><%= post.body %></p>
+<%
+
+end.empty?
+
+%>
+
+<p>Sorry there are no posts in this category.</p>
+
+<%
+end
+%>
+
+<%= link_to 'Back to Categories', categories_path %>
