--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Myrubyblog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <title>My Ruby Blog</title>
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Abel" type="text/css" />
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+
+
+<div id="wrapper">
+  <div id="header-wrapper">
+    <div id="header-def">
+      <div id="logo">
+        <h1><a href="#">My Ruby Blog</a></h1>
+
+        <p>Learning Ruby on Rails</p>
+      </div>
+      <div id="menu">
+
+        <ul class="main-nav">
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Resources", posts_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Login", admin_root_path %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- end #header -->
+  <div id="page">
+    <div id="page-bgtop">
+      <div id="page-bgbtm">
+        <div id="content">
+
+          <!--The yield field below takes care of the posts' content.-->
+          <%= yield %>
+
+          <div style="clear: both;">&nbsp;</div>
+        </div>
+        <!-- end #content -->
+
+        <div id="sidebar">
+          <ul>
+            <li>
+              <div id="search">
+                <form method="get" action="#">
+                  <div>
+                    <input type="text" name="s" id="sear-text" value=""/>
+                    <input type="submit" id="search-submit" value="GO"/>
+                  </div>
+                </form>
+              </div>
+              <div style="clear: both;">&nbsp;</div>
+            </li>
+            <li>
+              <h2>Get The Framework</h2>
+
+              <p>You can download Ruby and/or Ruby on Rails for free right now
+                <br>
+                <a style="color:#D93544" href="http://rubyonrails.org/download"></a></p>
+            </li>
+            <li>
+              <h2>Categories</h2>
+              <ul>
+                <li><a href="#">Ruby Programming Language</a></li>
+                <li><a href="#">Ruby on Rails Framework</a></li>
+                <li><a href="#">MVC Stuff</a></li>
+                <li><a href="#">Lurn Linux</a></li>
+                <li><a href="#">Other Languages</a></li>
+              </ul>
+            </li>
+            <li>
+              <h2>Blogroll</h2>
+              <ul>
+                <li><a href="#">Blog Post</a></li>
+                <li><a href="#">Blog Post</a></li>
+                <li><a href="#">Blog Post</a></li>
+                <li><a href="#">Blog Post</a></li>
+                <li><a href="#">Blog Post</a></li>
+                <li><a href="#">Blog Post</a></li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+        <!-- end #sidebar -->
+        <div style="clear: both;">&nbsp;</div>
+
+      </div>
+    </div>
+  </div>
+  <!-- end #page-->
+  <div id="footer">
+    <p>&Copy: 2013, My Ruby Blog -Sample Project</p>
+  </div>
+  <!-- en #footer-->
+</div>
+<!-- end #wrapper-->
+
 
 </body>
 </html>
